--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav ul li a.active {
     padding: 2px 6px;
     border-radius: 50%;
 }
-
+/*hi*/
 /* Hero section styles */
 .hero {
     background-image: url('img/mall.jpg');
